Front - Fix background white space animation

--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -146,7 +146,7 @@ p {
 }
 .bgMove {
     position : absolute;
-    height : 250%;
+    height : 300%;
     z-index: -1;
     width: 100%;
 }
